docs: record anime runtime compatibility workaround